--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch --env-file=.env src/server.ts",
     "start": "node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "biome format --write"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,11 @@
     "typescript": "~5.9.3"
   },
   "dependencies": {
-    "fastify": "^5.6.1"
+    "@fastify/cors": "^11.1.0",
+    "@fastify/swagger": "^9.5.2",
+    "@scalar/fastify-api-reference": "^1.38.1",
+    "fastify": "^5.6.1",
+    "fastify-type-provider-zod": "^6.1.0",
+    "zod": "^4.1.12"
   }
 }
