--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,8 @@
     "format": "biome format --write",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "tsx --env-file=.env src/db/seeds/stripe-webhooks.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
   "packageManager": "pnpm@10.19.0",
   "devDependencies": {
     "@biomejs/biome": "2.3.1",
+    "@faker-js/faker": "^10.1.0",
     "@types/node": "^24.9.1",
     "@types/pg": "^8.15.5",
     "tsx": "^4.20.6",
